fix: overflowing schedule nav

--- a/src/app/modules/parceiro/agenda/agenda.component.scss
+++ b/src/app/modules/parceiro/agenda/agenda.component.scss
@@ -24,7 +24,7 @@ fa-icon{
 }
 
 .nav{
-    width: 100vh;
+    width: 100%;
     margin: 0;
     padding: 0;
     background-color: $color-primary;
